"http://faunus.thinkaurelius.com":http://faunus.thinkaurelius.com

[[https://raw.github.com/thinkaurelius/faunus/master/doc/images/graph-globe.png|width=100px]]

h2. Faunus 0.x.y

h3. Version 0.4.3 (NOT OFFICIALLY RELEASED YET)

```xml
<dependency>
  <groupId>com.thinkaurelius.faunus</groupId>
  <artifactId>faunus</artifactId>
  <version>0.4.3-SNAPSHOT</version>
</dependency>
```

* No changes to date

h3. Version 0.4.2 (Jan 9, 2014)

```xml
<dependency>
  <groupId>com.thinkaurelius.faunus</groupId>
  <artifactId>faunus</artifactId>
  <version>0.4.2</version>
</dependency>
```

* Added Titan ElasticSearch dependency so its available in the Hadoop job jar

h3. Version 0.4.1 (Nov 24, 2013)

```xml
<dependency>
  <groupId>com.thinkaurelius.faunus</groupId>
  <artifactId>faunus</artifactId>
  <version>0.4.1</version>
</dependency>
```

* Fixed a severe bug in @Configuration@ entry orderings and @MapSequence@
* Changed default Cassandra partitioner from Random to Murmur3
* Broke @BlueprintsGraphOutputMapReduce@ into a MapReduce and then a Map (speeds up edge loading)

h3. Version 0.4.0 (Oct 16, 2013)

```xml
<dependency>
  <groupId>com.thinkaurelius.faunus</groupId>
  <artifactId>faunus</artifactId>
  <version>0.4.0</version>
</dependency>
```

* Removed support for Java 1.6 (Java 1.7+ supported)
* Bumped to support Hadoop 1.2.1
* Bumped to support Titan 0.4.0
* Bumped to support TinkerPop 2.4.0
* Renamed @FaunusRexsterExtension@ to @FaunusRexsterInputFormatExtension@
* Added @FaunusRexsterExecutorExtension@ which allows remote execution of a Faunus script and tracking of its progress
* Global GremlinFaunus variables are now available in @ScriptEngine@ use cases
* Reduced the width of the logger output of Hadoop via a new @log4j.properties@ file
* Simplified @ResultHookClosure@ with new Gremlin 2.4.0 classes
* Fixed @has(key,null)@ @NullPointerException@ issue
* Added support for @has(key)@ and @hasNot(key)@