@@ -9,6 +9,8 @@ import com.tinkerpop.blueprints.Edge;
 import com.tinkerpop.blueprints.Graph;
 import com.tinkerpop.blueprints.Vertex;
 import com.tinkerpop.blueprints.impls.tg.TinkerGraph;
+import com.tinkerpop.gremlin.groovy.jsr223.GremlinGroovyScriptEngine;
+import groovy.lang.MissingMethodException;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
@@ -18,7 +20,9 @@ import org.apache.hadoop.mapreduce.Mapper;
 import org.apache.hadoop.mapreduce.Reducer;
 import org.apache.hadoop.mrunit.mapreduce.MapReduceDriver;
 import org.apache.hadoop.mrunit.types.Pair;
+import org.apache.log4j.Level;
 
+import javax.script.ScriptException;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.util.HashMap;
@@ -44,7 +48,7 @@ public class BlueprintsGraphOutputMapReduceTest extends BaseTest {
         edgeMapReduceDriver.setReducer(new Reducer<NullWritable, FaunusVertex, NullWritable, FaunusVertex>());
     }
 
-    public void testTinkerGraphIncrementalLoading() throws Exception {
+    public void testTinkerGraphIncrementalVertexLoading() throws Exception {
         TinkerGraphOutputMapReduce.graph = new TinkerGraph();
         Configuration conf = BlueprintsGraphOutputMapReduce.createConfiguration();
         conf.set(BlueprintsGraphOutputMapReduce.FAUNUS_GRAPH_OUTPUT_BLUEPRINTS_SCRIPT_FILE, "./data/BlueprintsScript.groovy");
@@ -160,6 +164,146 @@ public class BlueprintsGraphOutputMapReduceTest extends BaseTest {
 
         // test peter
         vertices = new HashSet<Vertex>();
+        assertEquals(peter.getProperty("name"), "peter");
+        assertEquals(((Number) peter.getProperty("age")).intValue(), 35);
+        assertEquals(peter.getPropertyKeys().size(), 2);
+        assertEquals(count(peter.getEdges(Direction.OUT)), 1);
+        assertEquals(count(peter.getEdges(Direction.IN)), 0);
+        for (Edge e : peter.getEdges(Direction.OUT)) {
+            vertices.add(e.getVertex(Direction.IN));
+            assertEquals(e.getPropertyKeys().size(), 1);
+            assertNotNull(e.getProperty("weight"));
+            assertEquals(e.getProperty("weight"), 0.2);
+        }
+        assertEquals(vertices.size(), 1);
+        assertTrue(vertices.contains(lop));
+        // test ripple
+        vertices = new HashSet<Vertex>();
+        assertEquals(ripple.getProperty("name"), "ripple");
+        assertEquals(ripple.getProperty("lang"), "java");
+        assertEquals(ripple.getPropertyKeys().size(), 2);
+        assertEquals(count(ripple.getEdges(Direction.OUT)), 0);
+        assertEquals(count(ripple.getEdges(Direction.IN)), 1);
+        for (Edge e : ripple.getEdges(Direction.IN)) {
+            vertices.add(e.getVertex(Direction.OUT));
+            assertEquals(e.getPropertyKeys().size(), 1);
+            assertNotNull(e.getProperty("weight"));
+            assertEquals(e.getProperty("weight"), 1);
+        }
+        assertEquals(vertices.size(), 1);
+        assertTrue(vertices.contains(josh));
+    }
+
+    public void testTinkerGraphIncrementalEdgeLoading() throws Exception {
+        TinkerGraphOutputMapReduce.graph = new TinkerGraph();
+        Configuration conf = BlueprintsGraphOutputMapReduce.createConfiguration();
+        conf.set(BlueprintsGraphOutputMapReduce.FAUNUS_GRAPH_OUTPUT_BLUEPRINTS_SCRIPT_FILE, "./data/BlueprintsScript.groovy");
+        vertexMapReduceDriver.withConfiguration(conf);
+        Map<Long, FaunusVertex> graph = runWithGraph(generateGraph(BaseTest.ExampleGraph.TINKERGRAPH, conf), vertexMapReduceDriver);
+        edgeMapReduceDriver.withConfiguration(conf);
+        for (Map.Entry<Long, FaunusVertex> entry : graph.entrySet()) {
+            edgeMapReduceDriver.withInput(NullWritable.get(), entry.getValue());
+        }
+        edgeMapReduceDriver.run();
+
+        Map<Long, FaunusVertex> incrementalGraph = new HashMap<Long, FaunusVertex>();
+        // VERTICES
+        FaunusVertex marko1 = new FaunusVertex(11l);
+        marko1.setProperty("name", "marko");
+        FaunusVertex lop1 = new FaunusVertex(22l);
+        lop1.setProperty("name", "lop");
+        FaunusVertex vadas1 = new FaunusVertex(33l);
+        vadas1.setProperty("name", "vadas");
+        // EDGES
+        marko1.addEdge(Direction.OUT, "created", lop1.getIdAsLong()).setProperty("since", 2009);
+        marko1.addEdge(Direction.OUT, "knows", vadas1.getIdAsLong()).setProperty("since", 2008);
+        lop1.addEdge(Direction.IN, "created", marko1.getIdAsLong()).setProperty("since", 2009);
+        vadas1.addEdge(Direction.IN, "knows", marko1.getIdAsLong()).setProperty("since", 2008);
+        incrementalGraph.put(11l, marko1);
+        incrementalGraph.put(22l, lop1);
+        incrementalGraph.put(33l, vadas1);
+        conf = new Configuration();
+        conf.set(BlueprintsGraphOutputMapReduce.FAUNUS_GRAPH_OUTPUT_BLUEPRINTS_SCRIPT_FILE, "./data/BlueprintsScript.groovy");
+
+        setUp();
+        vertexMapReduceDriver.withConfiguration(conf);
+        graph = runWithGraph(incrementalGraph, vertexMapReduceDriver);
+        edgeMapReduceDriver.withConfiguration(conf);
+        for (Map.Entry<Long, FaunusVertex> entry : graph.entrySet()) {
+            edgeMapReduceDriver.withInput(NullWritable.get(), entry.getValue());
+        }
+        edgeMapReduceDriver.run();
+
+        final Graph tinkerGraph = ((TinkerGraphOutputMapReduce.VertexMap) vertexMapReduceDriver.getMapper()).graph;
+
+        Vertex marko = null;
+        Vertex peter = null;
+        Vertex josh = null;
+        Vertex vadas = null;
+        Vertex lop = null;
+        Vertex ripple = null;
+        int count = 0;
+        for (Vertex v : tinkerGraph.getVertices()) {
+            count++;
+            String name = v.getProperty("name").toString();
+            if (name.equals("marko")) {
+                marko = v;
+            } else if (name.equals("peter")) {
+                peter = v;
+            } else if (name.equals("josh")) {
+                josh = v;
+            } else if (name.equals("vadas")) {
+                vadas = v;
+            } else if (name.equals("lop")) {
+                lop = v;
+            } else if (name.equals("ripple")) {
+                ripple = v;
+            } else {
+                assertTrue(false);
+            }
+        }
+        assertTrue(null != marko);
+        assertTrue(null != peter);
+        assertTrue(null != josh);
+        assertTrue(null != vadas);
+        assertTrue(null != lop);
+        assertTrue(null != ripple);
+        assertEquals(count, 6);
+
+        count = 0;
+        for (Edge edge : tinkerGraph.query().edges()) {
+            System.out.println(edge);
+            count++;
+        }
+        assertEquals(count, 6);
+
+        // test marko
+        assertEquals(marko.getProperty("name"), "marko");
+        assertEquals(((Number) marko.getProperty("age")).intValue(), 29);
+        count = 0;
+        for (Edge e : marko.getEdges(Direction.OUT, "created")) {
+            count++;
+            assertTrue(e.getVertex(Direction.IN).getProperty("name").equals("lop"));
+            assertEquals(e.getPropertyKeys().size(), 2);
+            assertEquals(e.getProperty("since"), 2009);
+        }
+        assertEquals(count, 1);
+        count = 0;
+        for (Edge e : marko.getEdges(Direction.OUT, "knows")) {
+            count++;
+            if (e.getVertex(Direction.IN).getProperty("name").equals("vadas")) {
+                assertEquals(e.getPropertyKeys().size(), 2);
+                assertEquals(e.getProperty("since"), 2008);
+            } else if (e.getVertex(Direction.IN).getProperty("name").equals("josh")) {
+                assertEquals(e.getPropertyKeys().size(), 1);
+            } else {
+                assertTrue(false);
+            }
+        }
+        assertEquals(count, 2);
+
+        // test peter
+        Set<Vertex> vertices = new HashSet<Vertex>();
         assertEquals(peter.getProperty("name"), "peter");
         assertEquals(((Number) peter.getProperty("age")).intValue(), 35);
         assertEquals(peter.getPropertyKeys().size(), 2);
@@ -370,18 +514,25 @@ public class BlueprintsGraphOutputMapReduceTest extends BaseTest {
             @Override
             public void setup(final Mapper.Context context) throws IOException, InterruptedException {
                 this.graph = TinkerGraphOutputMapReduce.getGraph();
+                // this.graph = BlueprintsGraphOutputMapReduce.generateGraph(context.getConfiguration());
                 final String file = context.getConfiguration().get(FAUNUS_GRAPH_OUTPUT_BLUEPRINTS_SCRIPT_FILE, null);
-                if (null == file)
-                    this.loadingFromScratch = true;
-                else {
-                    this.loadingFromScratch = false;
+                if (null != file && firstRead) {
                     final FileSystem fs = FileSystem.get(context.getConfiguration());
                     try {
+                        engine = new GremlinGroovyScriptEngine();
                         engine.eval(new InputStreamReader(fs.open(new Path(file))));
+                        try {
+                            engine.eval("getOrCreateVertex(null,null,null)");
+                        } catch (ScriptException se) {
+                            if (se.getCause().getCause() instanceof MissingMethodException)
+                                engine = null;
+                        }
                     } catch (Exception e) {
                         throw new IOException(e.getMessage());
                     }
+                    firstRead = false;
                 }
+                LOGGER.setLevel(Level.INFO);
             }
         }
 
@@ -393,8 +544,29 @@ public class BlueprintsGraphOutputMapReduceTest extends BaseTest {
             @Override
             public void setup(final Mapper.Context context) throws IOException, InterruptedException {
                 this.graph = TinkerGraphOutputMapReduce.getGraph();
+                //this.graph = BlueprintsGraphOutputMapReduce.generateGraph(context.getConfiguration());
+                final String file = context.getConfiguration().get(FAUNUS_GRAPH_OUTPUT_BLUEPRINTS_SCRIPT_FILE, null);
+                if (null != file && firstRead) {
+                    final FileSystem fs = FileSystem.get(context.getConfiguration());
+                    try {
+                        engine = new GremlinGroovyScriptEngine();
+                        engine.eval(new InputStreamReader(fs.open(new Path(file))));
+                        try {
+                            engine.eval("getOrCreateEdge(null,null,null,null,null)");
+                        } catch (ScriptException se) {
+                            if (se.getCause().getCause() instanceof MissingMethodException)
+                                engine = null;
+                        }
+                    } catch (Exception e) {
+                        throw new IOException(e.getMessage());
+                    }
+                    firstRead = false;
+                }
+                LOGGER.setLevel(Level.INFO);
+
             }
         }
     }
 }
+
 
